--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                      <div class="bg-white shadow-sm rounded text-center  px-2 py-4 c-it">
                         <a href="https://app-mdu25.github.io/signal/savenews.html">
                            <img src="img/signal/newscopy.png" class="img-fluid px-2">
-                           <p class="m-0 pt-2 text-muted text-center"><h6><b>สำเนาข่าวศูนย์ข่าว</b></h6></p>
+                           <p class="m-0 pt-2 text-muted text-center"><h6><b>ทำสำเนาข่าว</b></h6></p>
                         </a>
                      </div>
                   </div>
@@ -77,7 +77,7 @@
                      <div class="bg-white shadow-sm rounded text-center  px-2 py-4 c-it">
                         <a href="https://app-mdu25.github.io/signal/rfnews.html">
                            <img src="img/signal/notifynews.png" class="img-fluid px-2">
-                           <p class="m-0 pt-2 text-muted text-center"><h6><b>แจ้งเตือนส่งข่าว</b></h6></p>
+                           <p class="m-0 pt-2 text-muted text-center"><h6><b>แจ้งส่งข่าว</b></h6></p>
                         </a>
                      </div>
                   </div>
@@ -104,7 +104,7 @@
                      <div class="bg-white shadow-sm rounded text-center  px-2 py-4 c-it">
                         <a href="https://developers.line.biz/flex-simulator/">
                            <img src="img/signal/line-circular.png" class="img-fluid px-2">
-                           <p class="m-0 pt-2 text-muted text-center"><h6><b>สร้าง Code ไลน์</b></h6></p>
+                           <p class="m-0 pt-2 text-muted text-center"><h6><b>สร้าง Code</b></h6></p>
                         </a>
                      </div>
                   </div>
