--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <link href="css/style.css" rel="stylesheet">
       <!-- Sidebar CSS -->
       <link href="vendor/sidebar/demo.css" rel="stylesheet">
+      <link rel="stylesheet" href="css/effect.css">
 
       <style>
          @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Thai&display=swap');
