--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="p-3 osahan-categories">
                <h6 class="mb-2">เลือกเมนูที่ต้องการใช้งาน?</h6>
                <div class="row m-0">
-                  <div class="col ps-0 pe-1 py-1" card card-custom nth-child>
+                  <div class="col ps-0 pe-1 py-1 card card-custom nth-child">
                      <div class="bg-white shadow-sm rounded text-center  px-2 py-4 c-it">
                         <a href="https://app-mdu25.github.io/signal/savenews.html">
                            <img src="img/signal/newscopy.png" class="img-fluid px-2">
