--- a/sendline.html
+++ b/sendline.html
@@ -27,7 +27,7 @@
             event.preventDefault();
             const formData = new FormData(document.getElementById("dataForm"));
 
-            fetch("YOUR_SERVER_URL", {
+            fetch("https://script.google.com/macros/s/AKfycbyQknGC3pmPzUC39LpguOrH55oqy0X4K36CboP9CQcoxyYesoNjurfQp-xACVCg_HVU/exec", {
                 method: "POST",
                 body: formData
             })
