--- a/sendline.html
+++ b/sendline.html
@@ -4,54 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form Submission</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 </head>
 <body>
-    <h2>Submit Information</h2>
-    <form id="dataForm">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required><br><br>
-
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required><br><br>
-
-        <label for="file">Upload File:</label>
-        <input type="file" id="file" name="file" required><br><br>
-
-        <button type="submit">Submit</button>
+<div class="container mt-5">
+    <h2>Submit Your Information</h2>
+    <form id="submissionForm" enctype="multipart/form-data">
+        <div class="form-group">
+            <label for="name">Name:</label>
+            <input type="text" class="form-control" id="name" name="name" required>
+        </div>
+        <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" class="form-control" id="email" name="email" required>
+        </div>
+        <div class="form-group">
+            <label for="file">Upload File:</label>
+            <input type="file" class="form-control-file" id="file" name="file" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+    <div id="loading" class="spinner-border text-primary mt-3" role="status" style="display: none;">
+        <span class="sr-only">Loading...</span>
+    </div>
+</div>
 
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-    <script>
-        document.getElementById("dataForm").addEventListener("submit", function(event) {
-            event.preventDefault();
-            const formData = new FormData(document.getElementById("dataForm"));
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>
+    $('#submissionForm').on('submit', function(event) {
+        event.preventDefault();
 
-            fetch("https://script.google.com/macros/s/AKfycbz4P2gdDYwQsSZsKxq4Zy2c5h9oskSTbCVbqsaOLjOQTxJBOd1B8uVN8foTH3Tp65xw/exec", {
-                method: "POST",
-                body: formData
-            })
-            .then(response => response.json())
-            .then(data => {
-                Swal.fire({
-                    title: 'Success!',
-                    text: 'Data submitted successfully!',
-                    icon: 'success',
-                    confirmButtonText: 'OK'
-                });
+        // Show spinner
+        $('#loading').show();
 
-                // Optional: Refresh the form
-                document.getElementById("dataForm").reset();
-            })
-            .catch(error => {
-                Swal.fire({
-                    title: 'Error!',
-                    text: 'There was an error submitting your data!',
-                    icon: 'error',
-                    confirmButtonText: 'Try Again'
-                });
-            });
+        var formData = new FormData(this);
+
+        // Send data to Apps Script Web App
+        fetch('YOUR_WEB_APP_URL', {
+            method: 'POST',
+            body: formData
+        })
+        .then(response => response.json())
+        .then(data => {
+            $('#loading').hide();
+            Swal.fire('Success', 'Your data has been submitted!', 'success');
+        })
+        .catch(error => {
+            $('#loading').hide();
+            Swal.fire('Error', 'There was an error submitting your data.', 'error');
         });
-    </script>
+    });
+</script>
 </body>
 </html>
