--- a/sendline.html
+++ b/sendline.html
@@ -41,7 +41,7 @@
         var formData = new FormData(this);
 
         // Send data to Apps Script Web App
-        fetch('YOUR_WEB_APP_URL', {
+        fetch('https://script.google.com/macros/s/AKfycbzBaCQycxae2xQ3fDAr183YZm8WLH7UguMwZEjor3mwTHb4c9fD84RctP_AHIJCSGnN/exec', {
             method: 'POST',
             body: formData
         })
